--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,10 +1,46 @@
 {% extends 'base.html' %} {% block content %}
 
-<div class="col-md-6 offset-md-3">
-  {% if user.is_authenticated %}
-  <h1>Hello World</h1>
+{% if user.is_authenticated %}
 
-  {% else %}
+<table class="table table-hover table-bordered table-striped">
+  <thead>
+    <tr>
+      <th scope="col">Name</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+      <th scope="col">Address</th>
+      <th scope="col">City</th>
+      <th scope="col">State</th>
+      <th scope="col">Zipcode</th>
+      <th scope="col">Created_at</th>
+      <th scope="col">ID</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% if records %}
+
+    {% for record in records %}
+    <tr>
+      <td>{{ record.first_name}} {{ record.last_name}}</td>
+      <td>{{ record.email}}</td>
+      <td>{{ record.phone}}</td>
+      <td>{{ record.address}}</td>
+      <td>{{ record.city}}</td>
+      <td>{{ record.state}}</td>
+      <td>{{ record.zipcode}}</td>
+      <td>{{ record.created_at}}</td>
+      <td><a href="{% url 'record' record.id %}">{{ record.id}}</a></td>
+    </tr>
+
+    {% endfor %}
+
+    {% endif %}
+  </tbody>
+</table>
+
+{% else %}
+
+<div class="col-md-6 offset-md-3">
 
   <h1>Login</h1>
   <br />
@@ -12,29 +48,17 @@
     {% csrf_token %}
     <form>
       <div class="mb-3">
-        <input
-          type="text"
-          class="form-control"
-          name="username"
-          placeholder="Username"
-          required
-        />
+        <input type="text" class="form-control" name="username" placeholder="Username" required />
       </div>
       <br />
       <div class="mb-3">
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          placeholder="Password"
-          required
-        />
+        <input type="password" class="form-control" name="password" placeholder="Password" required />
       </div>
       <br />
 
       <button type="submit" class="btn btn-secondary">Login</button>
     </form>
   </form>
-</div>
 
+</div>
 {% endif %} {% endblock %}
